FIX: ZEOctree has been made const correct. ADD: Initial ray casting interfaces has been added. ADD: Ray casting mechanisms has been added to ZEInterior. ADD: Mouse Mode option has been added to CustHCombat.
svn path=/trunk/; revision=1405

--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -65,8 +65,8 @@ ze_add_source(ZEPlayer.cpp				Sources)
 ze_add_source(ZEPlayer.h				Sources Headers ZEPP)
 ze_add_source(ZEPresentationSlide.cpp	Sources)
 ze_add_source(ZEPresentationSlide.h		Sources Headers ZEPP)
-ze_add_source(ZERayCaster.cpp			Sources)
-ze_add_source(ZERayCaster.h				Sources Headers)
+ze_add_source(ZERayCast.cpp				Sources)
+ze_add_source(ZERayCast.h				Sources Headers)
 ze_add_source(ZEScene.cpp				Sources)
 ze_add_source(ZEScene.h					Sources Headers)
 ze_add_source(ZESceneDebugDraw.cpp		Sources)
