--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -12,7 +12,7 @@ ZEGameModule = ZETestGame
 
 [Graphics]
 ScreenWidth = 1280
-ScreenHeight = 720
+ScreenHeight = 1020
 Fullscreen = false
 VerticalSync = false
 Antialiasing = 1
@@ -38,3 +38,5 @@ MusicVolume = 100
 VideoVolume = 100
 PlayerCommVolume = 100
 
+[CustHCombat]
+MouseMode = true
