ADD: HBAOProcessor is implemented. FIX: ZESea Texture loading bug fixed by giving specific mipmap count.
svn path=/trunk/; revision=1412

--- a/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
@@ -107,7 +107,7 @@ ze_add_source(ZED3D9SkyDomeMaterial.h					Sources)
 ze_add_source(ZED3D9SSAOProcessor.cpp					Sources)
 ze_add_source(ZED3D9SSAOProcessor.h						Sources)
 ze_add_source(ZED3D9HBAOProcessor.cpp					Sources)
-ze_add_source(ZED3D9HBAOProcessor.h						Sources)
+ze_add_source(ZED3D9HBAOProcessor.h						Sources ZEPP)
 ze_add_source(ZED3D9SSAAProcessor.cpp					Sources)
 ze_add_source(ZED3D9SSAAProcessor.h						Sources)
 ze_add_source(ZED3D9TerrainMaterial.cpp					Sources)
