ADD: ZEScriptEngine, ZEScriptClass, ZEScriptMethod, ZEScriptObject into ZEScript project. ADD: ZEScriptBaseGenerator added into ZEMetaCompiler. FIX: Fixed generation of class type objects' class pointer setting in ZEMetaGenerator.cpp
svn path=/branches/v0.6.1-NewMeta/; revision=1426

--- a/Source/ZECodeUtilities/ZEMetaCompiler/CMakeLists.txt
+++ b/Source/ZECodeUtilities/ZEMetaCompiler/CMakeLists.txt
@@ -49,6 +49,8 @@ ze_add_source(ZEMetaProcessorInternal.h         Sources)
 ze_add_source(ZEMetaProcessorClang.cpp          Sources)
 ze_add_source(ZEMetaCollectionGenerator.h    	Sources)
 ze_add_source(ZEMetaCollectionGenerator.cpp  	Sources)
+ze_add_source(ZEMetaScriptBaseGenerator.h		Sources)
+ze_add_source(ZEMetaScriptBaseGenerator.cpp		Sources)
 
 ze_add_executable(ZEMetaCompiler 
 	CONSOLE 
