ADD: ZEEntity::GetInvWorldTransform() function has been added to ZEEntity. ADD: Ray casting mechanism has been added to ZEEntity. IMP: ZEInterior has been integrated with the new ray casting mechanism.
svn path=/trunk/; revision=1435

--- a/Source/ZEModules/ZESensics/CMakeLists.txt
+++ b/Source/ZEModules/ZESensics/CMakeLists.txt
@@ -41,5 +41,4 @@ ze_add_source(ZESensicsInputModule.cpp			Sources)
 ze_add_source(ZESensicsInputModule.h				Sources)
 
 ze_add_library(ZESensics
-	SOURCES ${Sources}
-	LIBS libXSens)
+	SOURCES ${Sources})
