--- a/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
@@ -50,98 +50,99 @@ endif()
 
 add_subdirectory (ZED3D9PostProcessor)
 
-ze_add_source(ZED3D9PixelWorldPositionProcessor.cpp				Sources)
-ze_add_source(ZED3D9PixelWorldPositionProcessor.h				Sources)
-ze_add_source(ZED3D9BlurMaskProcessor.cpp						Sources)
-ze_add_source(ZED3D9BlurMaskProcessor.h							Sources)
-ze_add_source(ZED3D9BlurProcessor.cpp							Sources)
-ze_add_source(ZED3D9BlurProcessor.h								Sources)
-ze_add_source(ZED3D9ChannelDisorientationProcessor.cpp			Sources)
-ze_add_source(ZED3D9ChannelDisorientationProcessor.h			Sources)
-ze_add_source(ZED3D9CloudMaterial.cpp							Sources)
-ze_add_source(ZED3D9CloudMaterial.h								Sources)
-ze_add_source(ZED3D9ColorTransformProcessor.cpp					Sources)
-ze_add_source(ZED3D9ColorTransformProcessor.h					Sources)
-ze_add_source(ZED3D9CommonTools.cpp								Sources)
-ze_add_source(ZED3D9CommonTools.h								Sources)
-ze_add_source(ZED3D9ComponentBase.cpp							Sources)
-ze_add_source(ZED3D9ComponentBase.h								Sources)
-ze_add_source(ZED3D9DOFProcessor.cpp							Sources)
-ze_add_source(ZED3D9DOFProcessor.h								Sources ZEPP)
-ze_add_source(ZED3D9EDProcessor.cpp								Sources)
-ze_add_source(ZED3D9EDProcessor.h								Sources)
-ze_add_source(ZED3D9FixedMaterial.cpp							Sources)
-ze_add_source(ZED3D9FixedMaterial.h								Sources)
-ze_add_source(ZED3D9FogProcessor.cpp							Sources)
-ze_add_source(ZED3D9FogProcessor.h								Sources ZEPP)
-ze_add_source(ZED3D9FrameRenderer.cpp							Sources)
-ze_add_source(ZED3D9FrameRenderer.h								Sources)
-ze_add_source(ZED3D9GrainProcessor.cpp							Sources)
-ze_add_source(ZED3D9GrainProcessor.h							Sources)
-ze_add_source(ZED3D9HDRProcessor.cpp							Sources)
-ze_add_source(ZED3D9HDRProcessor.h								Sources ZEPP)
-ze_add_source(ZED3D9IndexBuffer.cpp								Sources)
-ze_add_source(ZED3D9IndexBuffer.h								Sources)
-ze_add_source(ZED3D9MLAAProcessorAreaImage.cpp					Sources)
-ze_add_source(ZED3D9MLAAProcessorAreaImage.h					Sources)
-ze_add_source(ZED3D9MLAAProcessor.cpp							Sources)
-ze_add_source(ZED3D9MLAAProcessor.h								Sources ZEPP)
-ze_add_source(ZED3D9Module.cpp									Sources)
-ze_add_source(ZED3D9Module.h									Sources)
-ze_add_source(ZED3D9MoonMaterial.cpp							Sources)
-ze_add_source(ZED3D9MoonMaterial.h								Sources)
-ze_add_source(ZED3D9Profiler.cpp								Sources)
-ze_add_source(ZED3D9Profiler.h									Sources)
-ze_add_source(ZED3D9Shader.cpp									Sources)
-ze_add_source(ZED3D9Shader.h									Sources)
-ze_add_source(ZED3D9ShaderManager.cpp							Sources)
-ze_add_source(ZED3D9ShaderManager.h								Sources)
-ze_add_source(ZED3D9ShadowRenderer.cpp							Sources)
-ze_add_source(ZED3D9ShadowRenderer.h							Sources)
-ze_add_source(ZED3D9SimpleMaterial.cpp							Sources)
-ze_add_source(ZED3D9SimpleMaterial.h							Sources)
-ze_add_source(ZED3D9SkyBoxMaterial.cpp							Sources)
-ze_add_source(ZED3D9SkyBoxMaterial.h							Sources)
-ze_add_source(ZED3D9SkyDomeMaterial.cpp							Sources)
-ze_add_source(ZED3D9SkyDomeMaterial.h							Sources)
-ze_add_source(ZED3D9SSAOProcessor.cpp							Sources)
-ze_add_source(ZED3D9SSAOProcessor.h								Sources)
-ze_add_source(ZED3D9HBAOProcessor.cpp							Sources)
-ze_add_source(ZED3D9HBAOProcessor.h								Sources ZEPP)
-ze_add_source(ZED3D9SSAAProcessor.cpp							Sources)
-ze_add_source(ZED3D9SSAAProcessor.h								Sources)
-ze_add_source(ZED3D9TerrainMaterial.cpp							Sources)
-ze_add_source(ZED3D9TerrainMaterial.h							Sources)
-ze_add_source(ZED3D9Texture2D.cpp								Sources)
-ze_add_source(ZED3D9Texture2D.h									Sources)
-ze_add_source(ZED3D9Texture3D.cpp								Sources)
-ze_add_source(ZED3D9Texture3D.h									Sources)
-ze_add_source(ZED3D9TextureCube.cpp								Sources)
-ze_add_source(ZED3D9TextureCube.h								Sources)
-ze_add_source(ZED3D9TextureMaskProcessor.cpp					Sources)
-ze_add_source(ZED3D9TextureMaskProcessor.h						Sources)
-ze_add_source(ZED3D9TextureResizeFilters.cpp					Sources)
-ze_add_source(ZED3D9TextureResizeFilters.h						Sources)
-ze_add_source(ZED3D9TextureResizer.cpp							Sources)
-ze_add_source(ZED3D9TextureResizer.h							Sources)
-ze_add_source(ZED3D9UIMaterial.cpp								Sources)
-ze_add_source(ZED3D9UIMaterial.h								Sources)
-ze_add_source(ZED3D9UnsharpenFilterProcessor.cpp				Sources)
-ze_add_source(ZED3D9UnsharpenFilterProcessor.h					Sources)
-ze_add_source(ZED3D9VertexBuffer.cpp							Sources)
-ze_add_source(ZED3D9VertexBuffer.h								Sources)
-ze_add_source(ZED3D9VertexDeclaration.cpp						Sources)
-ze_add_source(ZED3D9VertexDeclaration.h							Sources)
-ze_add_source(ZED3D9ViewPort.cpp								Sources)
-ze_add_source(ZED3D9ViewPort.h									Sources)
-ze_add_source(ZED3D9ZoomBlurProcessor.cpp						Sources)
-ze_add_source(ZED3D9ZoomBlurProcessor.h							Sources)
-ze_add_source(ZED3D9Plugin.h									Sources)
-ze_add_source(ZED3D9Plugin.cpp									Sources)
-ze_add_source(ZED3D9SeaMaterial.h								Sources)
-ze_add_source(ZED3D9SeaMaterial.cpp								Sources)
-ze_add_source(ZED3D9AerialPerspectiveProcessor.cpp				Sources)
-ze_add_source(ZED3D9AerialPerspectiveProcessor.h				Sources ZEPP)
+ze_add_source(ZED3D9PixelWorldPositionProcessor.cpp		Sources)
+ze_add_source(ZED3D9PixelWorldPositionProcessor.h		Sources)
+ze_add_source(ZED3D9BlurMaskProcessor.cpp				Sources)
+ze_add_source(ZED3D9BlurMaskProcessor.h					Sources)
+ze_add_source(ZED3D9BlurProcessor.cpp					Sources)
+ze_add_source(ZED3D9BlurProcessor.h						Sources)
+ze_add_source(ZED3D9ChannelDisorientationProcessor.cpp	Sources)
+ze_add_source(ZED3D9ChannelDisorientationProcessor.h	Sources)
+ze_add_source(ZED3D9CloudMaterial.cpp					Sources)
+ze_add_source(ZED3D9CloudMaterial.h						Sources)
+ze_add_source(ZED3D9ColorTransformProcessor.cpp			Sources)
+ze_add_source(ZED3D9ColorTransformProcessor.h			Sources)
+ze_add_source(ZED3D9CommonTools.cpp						Sources)
+ze_add_source(ZED3D9CommonTools.h						Sources)
+ze_add_source(ZED3D9ComponentBase.cpp					Sources)
+ze_add_source(ZED3D9ComponentBase.h						Sources)
+ze_add_source(ZED3D9DOFProcessor.cpp					Sources)
+ze_add_source(ZED3D9DOFProcessor.h						Sources ZEPP)
+ze_add_source(ZED3D9EDProcessor.cpp						Sources)
+ze_add_source(ZED3D9EDProcessor.h						Sources)
+ze_add_source(ZED3D9FixedMaterial.cpp					Sources)
+ze_add_source(ZED3D9FixedMaterial.h						Sources)
+ze_add_source(ZED3D9FogProcessor.cpp					Sources)
+ze_add_source(ZED3D9FogProcessor.h						Sources ZEPP)
+ze_add_source(ZED3D9FrameRenderer.cpp					Sources)
+ze_add_source(ZED3D9FrameRenderer.h						Sources)
+ze_add_source(ZED3D9GrainProcessor.cpp					Sources)
+ze_add_source(ZED3D9GrainProcessor.h					Sources)
+ze_add_source(ZED3D9HDRProcessor.cpp					Sources)
+ze_add_source(ZED3D9HDRProcessor.h						Sources ZEPP)
+ze_add_source(ZED3D9IndexBuffer.cpp						Sources)
+ze_add_source(ZED3D9IndexBuffer.h						Sources)
+ze_add_source(ZED3D9MLAAProcessorAreaImage.cpp			Sources)
+ze_add_source(ZED3D9MLAAProcessorAreaImage.h			Sources)
+ze_add_source(ZED3D9MLAAProcessor.cpp					Sources)
+ze_add_source(ZED3D9MLAAProcessor.h						Sources ZEPP)
+ze_add_source(ZED3D9Module.cpp							Sources)
+ze_add_source(ZED3D9Module.h							Sources)
+ze_add_source(ZED3D9MoonMaterial.cpp					Sources)
+ze_add_source(ZED3D9MoonMaterial.h						Sources)
+ze_add_source(ZED3D9Profiler.cpp						Sources)
+ze_add_source(ZED3D9Profiler.h							Sources)
+ze_add_source(ZED3D9Shader.cpp							Sources)
+ze_add_source(ZED3D9Shader.h							Sources)
+ze_add_source(ZED3D9ShaderManager.cpp					Sources)
+ze_add_source(ZED3D9ShaderManager.h						Sources)
+ze_add_source(ZED3D9ShadowRenderer.cpp					Sources)
+ze_add_source(ZED3D9ShadowRenderer.h					Sources)
+ze_add_source(ZED3D9SimpleMaterial.cpp					Sources)
+ze_add_source(ZED3D9SimpleMaterial.h					Sources)
+ze_add_source(ZED3D9SkyBoxMaterial.cpp					Sources)
+ze_add_source(ZED3D9SkyBoxMaterial.h					Sources)
+ze_add_source(ZED3D9SkyDomeMaterial.cpp					Sources)
+ze_add_source(ZED3D9SkyDomeMaterial.h					Sources)
+ze_add_source(ZED3D9SSAOProcessor.cpp					Sources)
+ze_add_source(ZED3D9SSAOProcessor.h						Sources ZEPP)
+ze_add_source(ZED3D9HBAOProcessor.cpp					Sources)
+ze_add_source(ZED3D9HBAOProcessor.h						Sources ZEPP)
+ze_add_source(ZED3D9SSAAProcessor.cpp					Sources)
+ze_add_source(ZED3D9SSAAProcessor.h						Sources)
+ze_add_source(ZED3D9TerrainMaterial.cpp					Sources)
+ze_add_source(ZED3D9TerrainMaterial.h					Sources)
+ze_add_source(ZED3D9Texture2D.cpp						Sources)
+ze_add_source(ZED3D9Texture2D.h							Sources)
+ze_add_source(ZED3D9Texture3D.cpp						Sources)
+ze_add_source(ZED3D9Texture3D.h							Sources)
+ze_add_source(ZED3D9TextureCube.cpp						Sources)
+ze_add_source(ZED3D9TextureCube.h						Sources)
+ze_add_source(ZED3D9TextureMaskProcessor.cpp			Sources)
+ze_add_source(ZED3D9TextureMaskProcessor.h				Sources)
+ze_add_source(ZED3D9TextureResizeFilters.cpp			Sources)
+ze_add_source(ZED3D9TextureResizeFilters.h				Sources)
+ze_add_source(ZED3D9TextureResizer.cpp					Sources)
+ze_add_source(ZED3D9TextureResizer.h					Sources)
+ze_add_source(ZED3D9UIMaterial.cpp						Sources)
+ze_add_source(ZED3D9UIMaterial.h						Sources)
+ze_add_source(ZED3D9UnsharpenFilterProcessor.cpp		Sources)
+ze_add_source(ZED3D9UnsharpenFilterProcessor.h			Sources)
+ze_add_source(ZED3D9VertexBuffer.cpp					Sources)
+ze_add_source(ZED3D9VertexBuffer.h						Sources)
+ze_add_source(ZED3D9VertexDeclaration.cpp				Sources)
+ze_add_source(ZED3D9VertexDeclaration.h					Sources)
+ze_add_source(ZED3D9ViewPort.cpp						Sources)
+ze_add_source(ZED3D9ViewPort.h							Sources)
+ze_add_source(ZED3D9ZoomBlurProcessor.cpp				Sources)
+ze_add_source(ZED3D9ZoomBlurProcessor.h					Sources)
+ze_add_source(ZED3D9Plugin.h							Sources)
+ze_add_source(ZED3D9Plugin.cpp							Sources)
+ze_add_source(ZED3D9SeaMaterial.h						Sources)
+ze_add_source(ZED3D9SeaMaterial.cpp						Sources)
+	
+ze_add_source(ZED3D9AerialPerspectiveProcessor.cpp		Sources)
+ze_add_source(ZED3D9AerialPerspectiveProcessor.h		Sources ZEPP)
 
 ze_add_source(Shaders/AerialPerspectiveProcessor.hlsl			Sources ZEFC)
 ze_add_source(Shaders/BlurMaskProcessor.hlsl					Sources ZEFC)
