CHG: Several changes made in RWSimulation project.Particle effects added and fixes made due to customer feedback. FIX: Minor fix made in 3dsMax scripts for bone export operations. ADD: ZEFoliage added for temporary vegetation tiling operations.
svn path=/trunk/; revision=1448

--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -85,6 +85,9 @@ ze_add_source(ZEWeather.cpp				Sources)
 ze_add_source(ZEWeather.h				Sources Headers ZEPP)
 ze_add_source(ZESea.cpp					Sources)
 ze_add_source(ZESea.h					Sources Headers ZEPP)
+ze_add_source(ZEFoliage.cpp				Sources)
+ze_add_source(ZEFoliage.h				Sources Headers ZEPP)
+
 
 ze_add_library(ZEGame 
 	SOURCES ${Sources}
