FIX: Exceptions and RTTI have been disabled on MSVC builds. FIX: ZEInputDevice initialization problems have been fixed. IMP: ZEXSens module has been upgraded to newer XSens SDK. REM: libXSens has been removed from ZEXSens module and moved to Externals. FIX: ZEArray::Exists reference parameter and const function have been fixed.
svn path=/trunk/; revision=1469

--- a/Source/ZETools/ZE3dsMax/ZE3dsMaxUI/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMax/ZE3dsMaxUI/CMakeLists.txt
@@ -46,6 +46,5 @@ ze_add_source(ZE3dsMaxScriptRemove.ms 			Sources ZEFC)
 ze_add_library(ZE3dsMaxUI 
 	SOURCES ${Sources}
 	LIBS ZEFoundation lib3dsMax)
-	
-set(LOCAL_WARNING_FLAGS /W3)
-set(LOCAL_RTTI_FLAGS /GR)
+
+set_property(TARGET ZE3dsMaxUI APPEND PROPERTY COMPILE_FLAGS "/GR")
