--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -1,6 +1,6 @@
 [Error]
-FileLogging = true
-LogFile = error.log
+LogFileEnabled = false
+LogFileName = error.log
 
 [ModuleManager]
 ZEGraphicsModule = ZED3D9Module
@@ -12,7 +12,7 @@ ZEGameModule = ZETestGame
 
 [Graphics]
 ScreenWidth = 1280
-ScreenHeight = 1020
+ScreenHeight = 1024
 Fullscreen = false
 VerticalSync = false
 Antialiasing = 1
@@ -39,4 +39,5 @@ VideoVolume = 100
 PlayerCommVolume = 100
 
 [CustHCombat]
-MouseMode = true
+MouseMode = false
+
