--- a/Source/ZETools/ZE3dsMax/ZE3dsMaxInteriorExporter/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMax/ZE3dsMaxInteriorExporter/CMakeLists.txt
@@ -55,3 +55,5 @@ qt4_wrap_cpp(QtMocFiles  ${QtMocs})
 ze_add_library(ZE3dsMaxInteriorExporter 
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles}
 	LIBS ZEFoundation ZE3dsMaxUtils ZEProgressDialog ZEResourceConfigurationWidget libQt lib3dsMax QWinWidget)
+
+set_property(TARGET ZE3dsMaxInteriorExporter APPEND PROPERTY COMPILE_FLAGS " /GR")
