--- a/Source/ZETools/ZE3dsMax/ZE3dsMaxUtils/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMax/ZE3dsMaxUtils/CMakeLists.txt
@@ -41,3 +41,5 @@ ze_add_source(ZE3dsMaxUtils.cpp				Sources)
 ze_add_library(ZE3dsMaxUtils
 	SOURCES ${Sources}
 	LIBS ZEFoundation lib3dsMax)
+
+set_property(TARGET ZE3dsMaxUtils APPEND PROPERTY COMPILE_FLAGS "/GR")
