CHG: ZEVector2, ZEVector4 create methods have been changed to static. CHG: ZEClass' and ZEObject's CallMethod has been expanded for scriptside calls. CHG: Scriptside inheritance mechanism is supporting AngelScript generic calling convention from this revision. FIX: Generic call method has been fixed in ZEAngelScriptEngine. FIX: ".register" file generation algorithm has been fixed in ZEMetaCollectionGenerator.
svn path=/branches/v0.6.1-NewMeta/; revision=1470

--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -87,6 +87,6 @@ ze_add_source(ZESea.cpp					Sources)
 ze_add_source(ZESea.h					Sources Headers ZEMC)
 
 ze_add_library(ZEGame 
+	ZEMC ${ZEMC}
 	SOURCES ${Sources}
-	HEADERS ${Headers}
-	ZEMC ${ZEMC})
+	HEADERS ${Headers})
