CHG: RWSimulation project improved by adding reset points, pause and play functionalities. Also marshaller and secondary helicopter added to the project. CHG: Enabling/Disabling Tick functionality added to ZEScene. MOV: Shaders have been moved from Resources to Modules. CHG: Minor fix in HavelsanCombat project.
svn path=/trunk/; revision=1474

--- a/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
@@ -173,7 +173,7 @@ ze_add_source(Shaders/SkinTransform.hlsl						Sources ZEFC)
 ze_add_source(Shaders/SkyBoxMaterial.hlsl						Sources ZEFC)
 ze_add_source(Shaders/SkyDomeMaterial.hlsl						Sources ZEFC)
 ze_add_source(Shaders/SSAAProcessor.hlsl						Sources ZEFC)
-ze_add_source(Shaders/SSOAProcessor.hlsl						Sources ZEFC)
+ze_add_source(Shaders/SSAOProcessor.hlsl						Sources ZEFC)
 ze_add_source(Shaders/TerrainMaterial.hlsl						Sources ZEFC)
 ze_add_source(Shaders/TextureMaskProcessor.hlsl					Sources ZEFC)
 ze_add_source(Shaders/TextureResizeProcessor.hlsl				Sources ZEFC)
