FIX: NULL ZEString access violation problems in ZEString::ToCString and const char* cast operators has been fixed. FIX: Version revision and branch has been fixed in CMake scripts. CHG: ZE_PLATFORM_BRANCH_NAME has been renamed to ZE_PLATFORM_BRANCH. CHG: ZEVersion has been moved from ZECore to ZEFoundation. ADD: ZECrashHandler module has been added. FIX: Deterministic ZERandom has been made indeterministic by adding time, process id and clock initialization seed. ADD: ZERandom::Reset function, which is used for reseting seed, has been added. ADD: User interface has been added to ZECrashReport.
svn path=/trunk/; revision=1481

--- a/Source/ZEEngine/ZECore/CMakeLists.txt
+++ b/Source/ZEEngine/ZECore/CMakeLists.txt
@@ -88,14 +88,18 @@ ze_add_source(ZESystemMessageHandler.h				Sources Headers)
 ze_add_source(ZEWindow.cpp							Sources)
 ze_add_source(ZEWindow.h							Sources Headers)
 ze_add_source(ZEWindowResources.h					Sources)
-ze_add_source(ZEVersion.cpp							Sources)
-ze_add_source(ZEVersion.h							Sources Headers)
 ze_add_source(ZETimer.cpp							Sources)
 ze_add_source(ZETimer.h								Sources Headers)
 ze_add_source(ZETimerManager.cpp					Sources)
 ze_add_source(ZETimerManager.h						Sources Headers)
+ze_add_source(ZECrashHandler.cpp					Sources)
+ze_add_source(ZECrashHandler.h						Sources Headers)
+ze_add_source(ZECrashHandler_Windows.cpp			Sources PLATFORMS Windows)
 
-ze_add_library(ZECore 
+ze_add_source(ZECrashHandlerCommandGenerator.h		Sources Headers)
+ze_add_source(ZECrashHandlerCommandGenerator.cpp	Sources)
+
+ze_add_library(ZECore
 	SOURCES ${Sources}
 	HEADERS ${Headers}
 	LIBS ZEFoundation libPhysX2)
