--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -87,6 +87,8 @@ ze_add_source(ZETimeCounter.cpp			Sources)
 ze_add_source(ZETimeCounterTests.cpp	Tests)
 ze_add_source(ZEBase64.h				Sources Headers)
 ze_add_source(ZEBase64.cpp				Sources)
+ze_add_source(ZEVersion.cpp				Sources)
+ze_add_source(ZEVersion.h				Sources Headers)
 
 ze_add_library(ZEFoundation
 	LIBS ZEDS ZEMath ZESerialization ZEStateMachine ZEFile ZEMacro ZESpatial ZESerialPort ZETest ZEThread ZETask ZESocket ZEML ZERegEx ZECompression
