FIX : ZESound/ZESoundResourceMP3.cpp  64 bit bug fixed. CHG : Texture compression capability of ZETextureTools is suspended because of ATICompress library's VS 2012 support problems. ZEGraphicsModule texture quality options modified to fit this suspension of compression feature. FIX : ZETexture/ZETextureFileJPEGCommonDefinitions.h missing memory.h include added.
svn path=/trunk/; revision=1500

--- a/Source/ZEEngine/ZETexture/CMakeLists.txt
+++ b/Source/ZEEngine/ZETexture/CMakeLists.txt
@@ -144,7 +144,7 @@ ze_add_source(ZETextureTestUtils.h						Sources Headers)
 ze_add_library(ZETexture 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
-	LIBS ZEFoundation libFreeImage libATICompress ZEDirect3D9)
+	LIBS ZEFoundation libFreeImage ZEDirect3D9)
 
 ze_add_test(ZETextureTests 
 	SOURCES ${Tests}
