--- a/Source/ZETools/ZE3dsMax/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMax/CMakeLists.txt
@@ -47,5 +47,6 @@ add_subdirectory(ZE3dsMaxInteriorExporter)
 add_subdirectory(ZE3dsMaxPlugin)
 add_subdirectory(ZE3dsMaxUtils)
 
-add_custom_target(ZE3dsMax
+add_custom_target(ZE3dsMaxBuild
 	SOURCES CMakeLists.txt)
+set_property(TARGET ZE3dsMaxBuild PROPERTY FOLDER "ZETools/ZE3dsMax")
