--- a/Source/ZETools/ZE3dsMax/ZE3dsMaxPlugin/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMax/ZE3dsMaxPlugin/CMakeLists.txt
@@ -51,11 +51,11 @@ ze_add_library(ZE3dsMaxPlugin
 	INSTALL)
 
 set_property(TARGET ZE3dsMaxPlugin APPEND PROPERTY COMPILE_FLAGS "/GR")
-
-set_property(TARGET ZE3dsMaxPlugin PROPERTY FOLDER "ZE3dsMax")
 set_property(TARGET ZE3dsMaxPlugin PROPERTY SUFFIX ".gup")
 set_property(TARGET ZE3dsMaxPlugin PROPERTY CLEAN_DIRECT_OUTPUT 1)
 
-get_property(TargetPath TARGET ZE3dsMaxPlugin PROPERTY LOCATION)
-file(TO_NATIVE_PATH ${TargetPath} NativeTargetPath)
-add_custom_command(TARGET ZE3dsMaxPlugin POST_BUILD COMMAND copy "${NativeTargetPath}" "${ZEBUILD_3DS_MAX_BINARY_DIRECTORY}\\plugins")
+if (EXISTS "${ZEBUILD_3DS_MAX_BINARY_DIRECTORY}\\plugins")
+	get_property(TargetPath TARGET ZE3dsMaxPlugin PROPERTY LOCATION)
+	file(TO_NATIVE_PATH ${TargetPath} NativeTargetPath)
+	add_custom_command(TARGET ZE3dsMaxPlugin POST_BUILD COMMAND copy "${NativeTargetPath}" "${ZEBUILD_3DS_MAX_BINARY_DIRECTORY}\\plugins")
+endif()
