--- a/Source/ZEEngine/ZENetwork/CMakeLists.txt
+++ b/Source/ZEEngine/ZENetwork/CMakeLists.txt
@@ -35,22 +35,26 @@
 
 cmake_minimum_required(VERSION 2.8)
 
-ze_add_source(ZENetworkModule.cpp					Sources)
-ze_add_source(ZENetworkModule.h						Sources Headers)
-ze_add_source(ZEPacketHandler.cpp					Sources)
-ze_add_source(ZEPacketHandler.h						Sources Headers)
-ze_add_source(ZEPacketManagerServer.cpp					Sources)
-ze_add_source(ZEPacketManagerServer.h						Sources Headers)
-ze_add_source(ZEConnection.cpp						Sources)
-ze_add_source(ZEConnection.h						Sources Headers)
-ze_add_source(ZEPacketManagerBuffer.cpp				Sources)
-ze_add_source(ZEPacketManagerBuffer.h				Sources Headers)
-ze_add_source(ZEServer.cpp							Sources)
-ze_add_source(ZEServer.h							Sources Headers)
-ze_add_source(ZEClient.cpp							Sources)
-ze_add_source(ZEClient.h							Sources Headers)
+ze_add_source(ZENetworkModule.cpp				Sources)
+ze_add_source(ZENetworkModule.h					Sources Headers)
+ze_add_source(ZENetworkClient.cpp				Sources)
+ze_add_source(ZENetworkClient.h					Sources Headers)
+ze_add_source(ZENetworkConnection.cpp				Sources)
+ze_add_source(ZENetworkConnection.h	 			Sources Headers)
+ze_add_source(ZENetworkModule.cpp				Sources)
+ze_add_source(ZENetworkModule.h	 				Sources Headers)
+ze_add_source(ZENetworkObject.cpp				Sources)
+ze_add_source(ZENetworkObject.h	 				Sources Headers)
+ze_add_source(ZENetworkObjectStateLocal.cpp			Sources)
+ze_add_source(ZENetworkObjectStateLocal.h			Sources Headers)
+ze_add_source(ZENetworkObjectStateRemote.cpp			Sources)
+ze_add_source(ZENetworkObjectStateRemote.h	 		Sources Headers)
+ze_add_source(ZENetworkObjectMessageManager.cpp			Sources)
+ze_add_source(ZENetworkObjectMessageManager.h		 	Sources Headers)
+ze_add_source(ZENetworkServer.cpp				Sources)
+ze_add_source(ZENetworkServer.h	 				Sources Headers)
 
 ze_add_library(ZENetwork 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
-	LIBS ZEFoundation ws2_32.lib)
+	LIBS ZEFoundation)
