--- a/Source/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEDS/CMakeLists.txt
@@ -41,8 +41,10 @@ ze_add_source(ZEArray.cpp				Sources)
 ze_add_source(ZEArray.h					Sources Headers)
 ze_add_source(ZEArrayIterators.cpp		Sources)
 ze_add_source(ZEArrayIterators.h		Sources Headers)
-ze_add_source(ZEArrayIteratorsTests.cpp		Tests)
+ze_add_source(ZEArrayIteratorsTests.cpp	Tests)
 ze_add_source(ZEArrayTests.cpp			Tests)
+ze_add_source(ZEBuffer.cpp				Sources)
+ze_add_source(ZEBuffer.h				Sources Headers)
 ze_add_source(ZEDelegate.cpp			Sources)
 ze_add_source(ZEDelegate.h				Sources Headers)
 ze_add_source(ZEDelegateImp.h			Sources Headers)
