ADD : ze_debugging.cmake has been added to CMake; And related macros/functions have been moved to file. ADD : ze_static_check.cmake has been added to CMake; And related macros/functions have been moved to file. ADD : ze_symbol_server.cmake has been added to CMake; And related macros/functions have been moved to file. ADD : ze_unit_test.cmake has been added to CMake; And related macros/functions have been moved to file. FIX : Unrelated macros/functions have been removed from ze.cmake. FIX : Related Macros/Functions have been moved to ze_platform.cmake. FIX : Related Macros/Functions have been moved to ze_utility.cmake. FIX : Macro/Function names have been changed at ze_version.cmake. FIX : Some warning cleaning at ZETank.cpp. FIX : Unreferenced variable has been removed from ZED3D9SkyDomeMaterial.cpp. FIX : Missing function return added to ZECrashReport.cpp. FIX : Missing function return added to ZECrashReportFileProvider.cpp. FIX : Some warning cleaning at ZECrashReportSender.cpp proper castings have been made. FIX : End of file missing bug has been fixed at ZECrashReportUIProgressWindow.cpp. FIX : Unreferenced variable has been removed from ZECrashReportUIReportDialog.cpp.
svn path=/trunk/; revision=1511

--- a/CMake/CMakeLists.txt
+++ b/CMake/CMakeLists.txt
@@ -39,13 +39,16 @@ ze_add_cmake_project(CMakeScripts
 	SOURCES	
 		ze.cmake
 		ze_check.cmake
-		ze_common.cmake
+		ze_debugging.cmake
 		ze_dependency.cmake
 		ze_external.cmake
 		ze_merge_libraries.cmake
 		ze_merge_libraries_unix.cmake.in
 		ze_platform.cmake
 		ze_qt.cmake
+		ze_static_check.cmake
+		ze_symbol_server.cmake
 		ze_target.cmake
+		ze_unit_test.cmake
 		ze_utility.cmake
 		ze_version.cmake)
